--- a/RobsonCosta_rm565066_pbl_fase5.ipynb
+++ b/RobsonCosta_rm565066_pbl_fase5.ipynb
@@ -456,7 +456,7 @@
         "id": "141aa0c4"
       },
       "source": [
-        "## 3) EDA rápida"
+        "## 3) Análise Exploratória de Dados rápida"
       ]
     },
     {
@@ -943,7 +943,7 @@
         "id": "c86eab0a"
       },
       "source": [
-        "## 4) Correlações numéricas"
+        "## 4) Correlações numéricas - mede o quanto duas variáveis numéricas se relacionam entre si."
       ]
     },
     {
@@ -1368,7 +1368,7 @@
         "id": "90a065be"
       },
       "source": [
-        "## 5) Clusterização (KMeans + PCA)"
+        "## 5) Clusterização (KMeans + PCA) - aprendizado não supervisionado que agrupa dados semelhantes sem precisar de rótulos"
       ]
     },
     {
@@ -2126,7 +2126,7 @@
         "id": "39b746ad"
       },
       "source": [
-        "## 7) Modelagem — 5 algoritmos (CV leve)"
+        "## 7) Modelagem — 5 algoritmos (Validação Cruzada leve)"
       ]
     },
     {
