--- a/RobsonCosta_rm565066_pbl_fase5.ipynb
+++ b/RobsonCosta_rm565066_pbl_fase5.ipynb
@@ -19,7 +19,7 @@
       "source": [
         "# FarmTech Solutions — Previsão de Rendimento de Safra (Fase 5)\n",
         "\n",
-        "Notebook final com EDA, clusterização, outliers, **5 modelos**, métricas (CV leve e hold-out) e **diagnósticos** (resíduos e importâncias)."
+        "Notebook final com Análise exploratório, clusterização, outliers, **5 modelos**, métricas (CV leve e hold-out) e **diagnósticos** (resíduos e importâncias)."
       ]
     },
     {
